--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "calendar"
   ],
   "author": "radzikow",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4"
+  }
 }
